Solved the profile submenu items align issues.

--- a/website/src/styles/App.less
+++ b/website/src/styles/App.less
@@ -182,12 +182,11 @@
   }
 }
 
-#profile\$Menu {
-  .ant-btn {
-    padding: 0;
-  }
-
+.profile-menu-popup {
   .anticon {
     margin: 0 0 1em;
+  }
+  .ant-btn {
+    padding: 0;
   }
 }
